--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "axios": "^0.27.2",
     "ethers": "^5.7.1",
     "moralis": "^2.4.0",
+    "moralis-v1": "^1.11.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moralis": "^1.4.2",
     "wagmi": "^0.6.6",
     "zod": "^3.18.0"
   },
